@@ -1,5 +1,10 @@
 		   CHANGES IN formatR VERSION 0.11
 
+BUG FIXES
+
+  o the shebang #! is no longer treated as an R comment (thanks, Mirko
+  Ebert, #36)
+
 MINOR CHANGES
 
   o the usage() function returns the source code of the usage of a function
